; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_pw_encrypt_md5.c___md5_Final.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/services/ead/src/extr_pw_encrypt_md5.c___md5_Final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MD5Context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.MD5Context*)* @__md5_Final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__md5_Final(i8* %0, %struct.MD5Context* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.MD5Context*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.MD5Context* %1, %struct.MD5Context** %4, align 8
  %5 = load %struct.MD5Context*, %struct.MD5Context** %4, align 8
  %6 = call i32 @__md5_Pad(%struct.MD5Context* %5)
  %7 = load i8*, i8** %3, align 8
  %8 = load %struct.MD5Context*, %struct.MD5Context** %4, align 8
  %9 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @__md5_Encode(i8* %7, i32 %10, i32 16)
  %12 = load %struct.MD5Context*, %struct.MD5Context** %4, align 8
  %13 = call i32 @memset(%struct.MD5Context* %12, i32 0, i32 4)
  ret void
}

declare dso_local i32 @__md5_Pad(%struct.MD5Context*) #1

declare dso_local i32 @__md5_Encode(i8*, i32, i32) #1

declare dso_local i32 @memset(%struct.MD5Context*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
